# librome

./: .bazelrc  .clang-format  .gitignore  BUILD  CMakeLists.txt  DevDockerfile  Dockerfile  Doxyfile  README.md  WORKSPACE  cc_toolchain_config.bzl  dependencies.bzl  environment.yml  setup.bzl
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: cmake-multi-platform.yml  cuda-cmake.yml  static.yml
cicd/: install_cuda_ubuntu.sh  install_dependencies_ubuntu.sh
cmake/: FindCoroutines.cmake  FindRDMA.cmake  utils.cmake
gladiators/: CMakeLists.txt
gladiators/coroutines/: c++20_coroutines.h  main.cc
gladiators/hello_world/: main.cc
include/rome/: rome.h
include/rome/colosseum/: client_adaptor.h  qps_controller.h  stream.h  streams.h  workload_driver.h
include/rome/colosseum/streams/: stream.h  streams.h  ycsb.h
include/rome/datastructure/: bitset.h  marked_ptr.h
include/rome/internal/: fixed_heap.h
include/rome/internal/atree/: atree.h  metadata.h
include/rome/logging/: logging  logging.h
include/rome/metrics/: counter.h  metric.h  stopwatch  stopwatch.h  summary.h
include/rome/rdma/: rdma_broker  rdma_broker.h  rdma_device  rdma_memory  rdma_receiver  rdma_util.h
include/rome/rdma/channel/: rdma_accessor  rdma_channel  rdma_messenger  sync_accessor  twosided_messenger  twosided_messenger.h  twosided_messenger_impl  twosided_messenger_impl.h
include/rome/rdma/connection_manager/: connection.h  connection_manager.h  connection_manager_impl.h
include/rome/rdma/memory_pool/: memory_pool.h  memory_pool_impl.h  remote_ptr.h  remote_ptr_impl.h
include/rome/rdma/rmalloc/: rmalloc.h
include/rome/testutil/: fake_clock.h  stream_matcher  stream_matcher.h
include/rome/util/: coroutine.h  distribution_util  memory_resource.h  status_util  thread_pool  thread_pool.h  thread_util  timing_util.h
protos/: BUILD  CMakeLists.txt  colosseum.proto  metrics.proto  rdma.proto  testutil.proto
rome/: CMakeLists.txt  deps.bzl  setup.bzl
rome/colosseum/: BUILD  CMakeLists.txt  client_adaptor.h  colosseum.proto  qps_controller.h  qps_controller_test.cc  stream.h  streams.h  streams_test.cc  workload_driver.h  workload_driver_test.cc
rome/colosseum/include/: workload_driver.h
rome/colosseum/test/: qps_controller_test.cc
rome/gladiators/coroutines/: BUILD  boost_coroutines.h  c++20_coroutines.h  main.cc  request_handler.h
rome/gladiators/hello_world/: BUILD  main.cc
rome/internal/: BUILD  fixed_heap_test.cc
rome/internal/atree/: BUILD  atree_test.cc  key.h  value.h  visitor.h
rome/logging/: BUILD  CMakeLists.txt  logging.h  logging_test.cc
rome/logging/include/rome/logging/: logging.h
rome/metrics/: BUILD  counter.h  metric.h  metric_test.cc  metrics.proto  stopwatch.cc  stopwatch.h  stopwatch_test.cc  summary.h
rome/private/: boost.bzl  compile_commands.bzl
rome/rdma/: BUILD  CMakeLists.txt  rdma_broker.cc  rdma_broker.h  rdma_broker_test.cc  rdma_client.h  rdma_device.cc  rdma_device.h  rdma_device_test.cc  rdma_memory.cc  rdma_memory.h  rdma_memory_test.cc  rdma_receiver.h  rdma_util.h  rdma_util_test.cc
rome/rdma/channel/: BUILD  rdma_accessor.h  rdma_channel.cc  rdma_channel.h  rdma_messenger.h  sync_accessor.cc  sync_accessor.h  twosided_messenger_impl.h
rome/rdma/src/: rdma_broker.cc  rdma_device.cc  rdma_memory.cc
rome/testutil/: BUILD  CMakeLists.txt  fake_clock.h  fake_clock_test.cc  status_matcher.h
rome/testutil/include/rome/testutil/: status_matcher.h
rome/testutil/tests/: CMakeLists.txt
rome/util/: BUILD  CMakeLists.txt  clocks.h  coroutine.h  coroutine_test.cc  distribution_util.h  duration_util.h  duration_util_test.cc  status_util.h  status_util_test.cc  thread_pool.cc  thread_pool.h  variant_util.h
rome/util/include/rome/util/: clocks.h  coroutine.h  macros.h  proto_util.h
rome/util/test/: status_util_test.cc  variant_util_test.cc
scripts/: common.py  config.ini  environment.yml  exclude.txt  include.txt  rexec.ini  rexec.py  util.py
scripts/plotting/: makecsv.py
scripts/setup/: apt.py  bazel.py  bootstrap.sh  conda.py  config.ini  go.py  golang.py  main.py  mlnx_ofed.py  pprof.py  resources.py  root.sh  run.py  util.py  zookeeper.py
share/: romeConfig.cmake
src/rome/metrics/: stopwatch.cc
src/rome/rdma/: rdma_broker  rdma_broker.cc  rdma_device  rdma_device.cc  rdma_memory  rdma_memory.cc
src/rome/rdma/channel/: rdma_channel.cc  sync_accessor  sync_accessor.cc
src/rome/util/: thread_pool.cc
tests/: CMakeLists.txt
tests/rome/: CMakeLists.txt
tests/rome/colosseum/: CMakeLists.txt  qps_controller_test.cc  streams_test.cc  workload_driver_test  workload_driver_test.cc
tests/rome/colosseum/streams/: streams_test.cc  ycsb_test.cc
tests/rome/datastructure/: CMakeLists.txt  bitset_test.cc  marked_ptr_test.cc
tests/rome/internal/: CMakeLists.txt  fixed_heap_test.cc
tests/rome/internal/atree/: CMakeLists.txt  atree_test.cc
tests/rome/logging/: CMakeLists.txt  logging_test.cc
tests/rome/metrics/: CMakeLists.txt  metric_test.cc  stopwatch_test.cc
tests/rome/rdma/: CMakeLists.txt  rdma_broker_test  rdma_broker_test.cc  rdma_device_test  rdma_device_test.cc  rdma_memory_test  rdma_memory_test.cc  rdma_util_test.cc
tests/rome/rdma/channel/: CMakeLists.txt  twosided_messenger_test.cc
tests/rome/rdma/connection_manager/: CMakeLists.txt  connection_manager_test.cc
tests/rome/rdma/memory_pool/: CMakeLists.txt  memory_pool_test.cc  remote_ptr_test.cc
tests/rome/rdma/rmalloc/: CMakeLists.txt  rmalloc_test.cc
tests/rome/rdma/test/: rdma_broker_test.cc  rdma_util_test.cc
tests/rome/testutil/: CMakeLists.txt  fake_clock_test.cc
tests/rome/util/: CMakeLists.txt  coroutine_test_cuda.cu  status_util_test.cc  variant_util_test.cc
tools/: debugpy_util.py
