
if(NOT ${HAVE_RDMA_CARD})
add_test_executable(rdma_util_test rdma_util_test.cc DISABLE_TEST)
add_test_executable(rdma_memory_test rdma_memory_test.cc DISABLE_TEST)
add_test_executable(rdma_device_test rdma_device_test.cc DISABLE_TEST)
add_test_executable(rdma_broker_test rdma_broker_test.cc DISABLE_TEST)
else()
add_test_executable(rdma_util_test rdma_util_test.cc)
add_test_executable(rdma_memory_test rdma_memory_test.cc)
add_test_executable(rdma_device_test rdma_device_test.cc)
add_test_executable(rdma_broker_test rdma_broker_test.cc)
add_subdirectory(channel)
add_subdirectory(connection_manager)
add_subdirectory(memory_pool)
add_subdirectory(rmalloc)
endif()
